# prediction_mart

./: Cargo.toml  Dioxus.toml  a  prompts.txt
.github/workflows/: rust.yml
release/web/public/: index.html
release/web/public/assets/: prediction_mart-25eb761a4d65117c.js  prediction_mart-25eb761a4d65117c.js.br  prediction_mart-4120789c1099918d.js  prediction_mart-4120789c1099918d.js.br  prediction_mart-afc9f0df090b5afe.js  prediction_mart-afc9f0df090b5afe.js.br  prediction_mart-cf452f28ec8ac3cc.js  prediction_mart-cf452f28ec8ac3cc.js.br  prediction_mart-e91739a40bd603c5.js  prediction_mart-e91739a40bd603c5.js.br  prediction_mart-e95a100112cbe0bd.js  prediction_mart-e95a100112cbe0bd.js.br  prediction_mart-eed9864b9c6a95b0.js  prediction_mart-eed9864b9c6a95b0.js.br  prediction_mart_bg-025e2d8b59772b78.wasm  prediction_mart_bg-025e2d8b59772b78.wasm.br  prediction_mart_bg-16c4eae7ed7c686b.wasm  prediction_mart_bg-16c4eae7ed7c686b.wasm.br  prediction_mart_bg-4e1fc1cebc73f727.wasm  prediction_mart_bg-4e1fc1cebc73f727.wasm.br  prediction_mart_bg-58086c13d65fce3c.wasm  prediction_mart_bg-58086c13d65fce3c.wasm.br  prediction_mart_bg-5df5f483f87b22e3.wasm  prediction_mart_bg-5df5f483f87b22e3.wasm.br  prediction_mart_bg-cdd070891ba95469.wasm  prediction_mart_bg-cdd070891ba95469.wasm.br  prediction_mart_bg-f429cf55c6375c74.wasm  prediction_mart_bg-f429cf55c6375c74.wasm.br
src/: main.rs
