[package]
name = "prediction_mart"
version = "0.1.0"
authors = ["AThomas314 <151739259+AThomas314@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.1"
dioxus = { version = "0.6.2"}
getrandom = { version = "0.3.3", features = ["wasm_js"] }
image = { version = "0.25", default-features = false, features = ["png"] }
plotters = "0.3.7"
plotters-svg = "0.3.7"
rand = { version = "0.9.2"}
urlencoding = "2.1.3"



[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
